--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-
 exclude:
   - "/vendor/"
   - "Gemfile"
@@ -14,13 +13,11 @@ keep_files:
 
 
 # Site settings
-title: Airspace
+title: Tailwind Investing
 subtitle: "A free HTML5 agency template"
 url: "http://ndrewtl.github.io" # the base hostname & protocol for your site
-# baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
-baseurl: "/airspace-jekyll"
 cover: "/assets/cover.png"
-logo: "/assets/logo.png"
+logo: "/assets/logo.jpg"
 
 # Build settings
 markdown: kramdown
